--- a/php/Dockerfile
+++ b/php/Dockerfile
@@ -7,5 +7,5 @@ RUN pecl install xdebug
 RUN docker-php-ext-enable xdebug
 RUN rm -rf /tmp/*
 
-# Install composer
+# DEV: Install composer
 RUN curl -sS https://getcomposer.org/installer | php -- --install-dir=/usr/local/bin --filename=composer
